# RT-Analyses-Demo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: 01_walkthrough.ipynb
examples/synthetic_data/: sub-01_task-demo_events.tsv
rt_demo/: __init__.py  cli.py  extract.py  plots.py  summary.py  synth.py
rt_demo/parsers/: __init__.py  bids.py  presentation.py
tests/: test_bids.py  test_extract.py  test_presentation.py  test_summary.py
